# tp_strings

./: '  .gitignore  CMakeLists.txt  README.md
libraries/: CMakeLists.txt
libraries/lower/inc/: lower.h
libraries/lower/src/: lower.c
libraries/rot13/inc/: rot13.h
libraries/rot13/src/: rot13.c
libraries/tst/: CMakeLists.txt
libraries/tst/TestLibs/: main.c  test.h
libraries/tst/TestUtils/: main.c
libraries/upper/inc/: upper.h
libraries/upper/src/: upper.c
libraries/utils/inc/: utils.h
libraries/utils/src/: .parse.c.swp  itoa.c  parse.c  printmsg.c
tools/: CMakeLists.txt
tools/inc/: printmsg.h
tools/src/: main.c  printmsg.c  server.c
